Cypress setup and tests

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,3 +7,15 @@
 html {
   @apply bg-gray-50;
 }
+
+@layer utilities {
+  @variants responsive {
+    .masonry {
+      column-gap: 1.5em;
+      column-count: 3;
+    }
+    .break-inside {
+      break-inside: avoid;
+    }
+  }
+}
